bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "grpc", version = "1.72.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "30.0", repo_name = "com_google_protobuf")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension", dev_dependency = True)
use_repo(cc_configure, "local_config_cc")
